--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <p><a href="/datavis-course/2017_09_18/index09.html">index09.html</a></p>
         <p><a href="/datavis-course/2017_09_18/index10.html">index10.html</a></p>
         <p><a href="/datavis-course/2017_09_18/index11.html">index11.html</a></p>
-
+        <p><a href="/datavis-course/2017_09_25/movies_d3.html">movies_d3.html</a></p>
     </div><!-- /.container -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
