--- a/2017_09_25/movies_d3.html
+++ b/2017_09_25/movies_d3.html
@@ -10,15 +10,15 @@
 <body>
 	<nav class="titulo">
     <h1>Atividade Visualização</h1>
-    <span><a href="#">dia/mes/ano</a></span>
+    <span><a href="#">25/09/2017</a></span>
   </nav>
 
 	<nav class="horizontal">
 	  <ul>
-	    <li><a href="#" onclick="ativarBilheteria()">Bilheteria</a></li>
-	    <li><a href="#" onclick="ativarOrcamento()">Orçamento</a></li>
-	    <li><a href="#" onclick="ativarLucro()">Lucro</a></li>
-	    <li><a href="#" onclick="ativarGenero()">Genero</a></li>
+	    <li><a href="#" onclick="ativarBilheteria(this)">Bilheteria</a></li>
+	    <li><a href="#" onclick="ativarOrcamento(this)">Orçamento</a></li>
+	    <li><a href="#" onclick="ativarLucro(this)">Lucro</a></li>
+	    <li><a href="#" onclick="ativarGenero(this)">Genero</a></li>
 	  </ul>
 	</nav>
 
@@ -37,8 +37,6 @@
   <div id="divGenero" class="sumir">
   	<h2 id="genero"><b>Gráfico bilheteria por genero</b></h2>
   </div>
-
 	<script src="js/script.js"></script>
-
 </body>
 </html>
