acento no genero colocado

--- a/2017_09_25/movies_d3.html
+++ b/2017_09_25/movies_d3.html
@@ -18,7 +18,7 @@
 	    <li><a href="#" onclick="ativarBilheteria(this)">Bilheteria</a></li>
 	    <li><a href="#" onclick="ativarOrcamento(this)">Orçamento</a></li>
 	    <li><a href="#" onclick="ativarLucro(this)">Lucro</a></li>
-	    <li><a href="#" onclick="ativarGenero(this)">Genero</a></li>
+	    <li><a href="#" onclick="ativarGenero(this)">Gênero</a></li>
 	  </ul>
 	</nav>
 
@@ -37,8 +37,8 @@
   <div id="divGenero" class="sumir">
   	<h2 id="genero"><b>Gráfico bilheteria por genero</b></h2>
   </div>
-	<!-- <script src="js/script.js"></script> -->
-	<script type="text/javascript">
+	<script src="js/script.js"></script>
+	<!-- <script type="text/javascript">
 	function ativarBilheteria(e){
 		$("a").removeClass('active');
 		$(e).addClass('active')
@@ -247,6 +247,6 @@
 		return (a.lucro) < (b.lucro)? 1:-1;
 	};
 
-	</script>
+	</script> -->
 </body>
 </html>
