--- a/2017_10_02/q2.html
+++ b/2017_10_02/q2.html
@@ -7,85 +7,105 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/crossfilter.js" charset="utf-8"></script>
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/dc.js" charset="utf-8"></script>
   </head>
   <body>
 
     <nav class="horizontal">
       <ul>
-        <li><a href="#" onclick="">Bilheteria</a></li>
-        <li><a href="#" onclick="">Gênero</a></li>
+        <li><a href="#" onclick="ativarBilheteria(this)">Bilheteria</a></li>
+        <li><a href="#" onclick="ativarGenero(this)">Gênero</a></li>
       </ul>
     </nav>
-    <div>
-      <h1>Bilheteria</h1>
-      <div id="bilheteria"></div>
+    <div id="divBilheteria" class="sumir">
+      <h1> Bilheteria</h1>
+      <h1 id="bilheteria"></h1>
     </div>
-    <div display="block">
-      <h1>genero</h1>
-      <div id="genero"></div>
+    <div id="divGenero" class="sumir">
+      <h1>Gênero</h1>
+      <h1 id="genero"></h1>
     </div>
 
     <script type="text/javascript">
-      var bilheteriaChart = dc.barChart('#bilheteria');
-      var generoChart = dc.barChart('#genero');
-      d3.json("movies.json", function(error, data){
+      function ativarBilheteria(e){
+        var bilheteriaChart = dc.barChart('#bilheteria');
+        $("a").removeClass('active');
+        $(e).addClass('active')
+        $("div").addClass('sumir');
+        $("#divBilheteria").removeClass('sumir');
+        $("#divBilheteria").addClass('ativar');
 
-        var facts = crossfilter(data);
+        d3.json("movies.json", function(error, data){
 
-        var dateDim = facts.dimension(function(d){
-            return d.Year;
+          var facts = crossfilter(data);
+
+          var dateDim = facts.dimension(function(d){
+              return d.Year;
+          });
+
+          var generoDim = facts.dimension(function(d){
+              return d.Year;
+          });
+
+          var dataGross = dateDim.group().reduceSum(function(d){
+              return d.Worldwide_Gross_M;
+          });
+
+          bilheteriaChart.width(800)
+                   .height(400)
+                   .margins({top: 30, right: 50, bottom: 25, left: 40})
+                   .dimension(dateDim)
+                   .x(d3.scale.ordinal())
+                   .xUnits(dc.units.ordinal)
+                   .yAxisLabel('Gross')
+                   .barPadding(0.1)
+                   .outerPadding(0.05)
+                   .brushOn(false)
+                   .group(dataGross);
+
+          dc.renderAll();
         });
 
-        var generoDim = facts.dimension(function(d){
-            return d.Year;
+      }
+
+      function ativarGenero(e){
+        var generoChart = dc.barChart('#genero');
+        $("a").removeClass('active');
+        $(e).addClass('active')
+        $("div").addClass('sumir');
+        $("#divGenero").removeClass('sumir');
+        $("#divGenero").addClass('ativar');
+
+        d3.json("movies.json", function(error, data){
+
+          var facts = crossfilter(data);
+
+          var generoDim = facts.dimension(function(d){
+              return d.Genre;
+          });
+
+          var grossGenero = generoDim.group().reduceSum(function(d){
+              return d.Worldwide_Gross_M;
+          });
+
+          generoChart.width(800)
+                   .height(400)
+                   .margins({top: 30, right: 50, bottom: 25, left: 40})
+                   .dimension(generoDim)
+                   .x(d3.scale.ordinal())
+                   .xUnits(dc.units.ordinal)
+                   .yAxisLabel('Gross')
+                   .barPadding(0.1)
+                   .ordering(function(d){ return -d.value })
+                   .outerPadding(0.05)
+                   .brushOn(false)
+                   .group(grossGenero);
+
+          dc.renderAll();
         });
+      }
 
-        var dataGross = dateDim.group().reduceSum(function(d){
-            return d.Worldwide_Gross_M;
-        });
-
-        bilheteriaChart.width(800)
-                 .height(400)
-                 .margins({top: 30, right: 50, bottom: 25, left: 40})
-                 .dimension(dateDim)
-                 .x(d3.scale.ordinal())
-                 .xUnits(dc.units.ordinal)
-                 .yAxisLabel('Gross')
-                 .barPadding(0.1)
-                 .outerPadding(0.05)
-                 .brushOn(false)
-                 .group(dataGross);
-
-        dc.renderAll();
-      });
-      d3.json("movies.json", function(error, data){
-
-        var facts = crossfilter(data);
-
-        var generoDim = facts.dimension(function(d){
-            return d.Genre;
-        });
-
-        var grossGenero = generoDim.group().reduceSum(function(d){
-            return d.Worldwide_Gross_M;
-        });
-
-        generoChart.width(800)
-                 .height(400)
-                 .margins({top: 30, right: 50, bottom: 25, left: 40})
-                 .dimension(generoDim)
-                 .x(d3.scale.ordinal())
-                 .xUnits(dc.units.ordinal)
-                 .yAxisLabel('Gross')
-                 .barPadding(0.1)
-                 .ordering(function(d){ return -d.value })
-                 .outerPadding(0.05)
-                 .brushOn(false)
-                 .group(grossGenero);
-
-        dc.renderAll();
-      });
     </script>
   </body>
 </html>
