--- a/index.html
+++ b/index.html
@@ -59,6 +59,22 @@
         <p><a href="/datavis-course/2017_09_18/index11.html">index11.html</a></p>
         <p><a href="/datavis-course/2017_09_25/movies_d3.html">movies_d3.html</a></p>
     </div><!-- /.container -->
+    <div class="container">
+
+      <div class="page-header">
+        <h1>Atividade 25/09/2017</h1>
+      </div>
+        <p><a href="/datavis-course/2017_09_25/movies_d3.html">movies_d3.html</a></p>
+    </div><!-- /.container -->
+
+    <div class="container">
+
+      <div class="page-header">
+        <h1>Atividade 02/10/2017</h1>
+      </div>
+        <p><a href="/datavis-course/2017_10_02/movies_d3.html">index5.html</a></p>
+        <p><a href="/datavis-course/2017_10_02/movies_d3.html">q2.html</a></p>
+    </div><!-- /.container -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
