--- a/2017_10_09/chicago.html
+++ b/2017_10_09/chicago.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <title> Earthquake Data</title>
+            <title> Chicago Crimes</title>
              <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
             <!-- Optional theme -->
@@ -14,179 +14,172 @@
             <script src="js/crossfilter.js" charset="utf-8"></script>
             <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
             <script src="js/dc.js" charset="utf-8"></script>
+
             <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css" integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ==" crossorigin=""/>
-            <!-- Make sure you put this AFTER Leaflet's CSS -->
-            <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js" integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log==" crossorigin=""></script>
+
+            <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js" integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log=="crossorigin=""></script>
 
             <style type="text/css">
-
-
             </style>
         </head>
         <body>
             <div class='container-fluid'>
-                <h1> Earthquakes in New Zealand </h1>
-                <div id='magnitude-chart'>
-                  <h4> Number of Events by Magnitude </h4>
-                </div>
-                <div id='depth-chart'>
-                  <h4> Events by Depth (km) </h4>
-                </div>
-                <div>
-                    <div id='time-chart'>
-                      <h4> Events per hour </h4>
-                    </div>
-                </div>
+                <h1> Chicago Crimes </h1>
 
                 <div id="mapid"></div>
 
-                <table class="table table-hover" id="dc-table-graph">
-                    <thead>
-                        <tr class="header">
-                            <th>DTG</th>
-                            <th>Magnitude</th>
-                            <th>Depth</th>
-                            <th>Latitude</th>
-                            <th>Longitude</th>
-                        </tr>
-                    </thead>
-                </table>
+                <div id='bar'>
+                      <h4> Crimes gráfico de linhas </h4>
+                </div>
+                <div id='linear'>
+                  <h4> Crimes gráfico de linhas </h4>
+                </div>
+
+
+
             </div>
             <script type="text/javascript">
             // Create the dc.js chart objects & link to divs
-            var graphBarMag = dc.barChart('#magnitude-chart');
-            var table = dc.dataTable('#dc-table-graph');
-            var graphBarDepth = dc.barChart('#depth-chart');
-            var graphLine = dc.lineChart('#time-chart');
-
-            var map = L.map('mapid').setView([-41.05,172.93], 5);
+            var map = L.map('mapid').setView([41.82037, -87.663907], 5);
             L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
               attribution: '&copy; <a href="http://www.openstreetmap.org/">OpenStreetMap</a> contributors',
               maxZoom: 17
-            }).addTo(map);
-
+              }).addTo(map);
+            var barras = dc.barChart("#bar");
+            var timeChart = dc.lineChart("#linear");
+          /*
+            var dataTable = dc.dataTable("#dc-table-graph");
+            var magnitudeChart = dc.barChart("#magnitude-chart");
+            var depthChart = dc.barChart("#depth-chart");
+            var timeChart = dc.lineChart("#time-chart");
+            */
             // load data from a csv file
-            d3.csv("earthquakes.csv", function (data) {
+            d3.csv("Crimes_Chicago_Sep2017.csv", function (data) {
               // format our data
-              var dtgFormat = d3.time.format.utc("%Y-%m-%dT%H:%M:%S");
-
+              var dtgFormat = d3.time.format.utc("%d-%m-%Y %I:%M:%S");
               data.forEach(function(d){
-                d.dtg = dtgFormat.parse(d.origintime.substr(0,19));
-                d.latitude = +d.latitude;
-                d.longitude = +d.longitude;
-                d.mag = d3.round(+d.magnitude,1);
-                d.depth = d3.round(+d.depth,0);
-                var circle = L.circle([d.latitude, d.longitude], d.mag*1000, {
-                  color: '#fd8d3c',
-                  weight: 2,
-                  fillColor: '#fecc5c',
-                  fillOpacity: 0.5
-                }).addTo(map);
-
-                circle.bindPopup("Magnitude: " + d.mag + " Time: " + d.dtg);
-
+                d.dtg = dtgFormat.parse(d.Date);
+                d.lat = +d.Latitude;
+                d.long = +d.Longitude;
+                d.type = d["Primary Type"];
+                d.id = d["ID"];
+                var x = d3.scale.ordinal()
+                    .domain(["HOMICIDE","ROBBERY","BURGLARY"])
+                    .range(["red", "blue", "orange"]);
+                var circle = L.circle([d.lat, d.long], 100, {
+                    color: x(d.type),
+                    weight: 2,
+                    fillColor: x(d.type),
+                    fillOpacity: 0.5,
+                  }).addTo(map);
+                  circle.bindPopup("Type: " + d.type);
               });
-              console.log(data);
-              // Run the data through crossfilter and load our 'facts'
+
               var facts = crossfilter(data);
 
+              var typeDimension = facts.dimension(function(d){
+                return d.type;
+              });
+
+              var typeDimensionCount = typeDimension.group();
+
+
+              console.log(typeDimensionCount);
+              barras.height(400)
+              .margins({top: 30, right: 50, bottom: 25, left: 40})
+              .dimension(typeDimension)
+              .x(d3.scale.ordinal())
+              .xUnits(dc.units.ordinal)
+              .yAxisLabel('Gross')
+              .barPadding(0.1)
+              .outerPadding(0.05)
+              .brushOn(false)
+              .group(typeDimensionCount);
+/*
+              // Run the data through crossfilter and load our 'facts'
+              var facts = crossfilter(data);
               //Create dataTable dimension using the date (dtg)
               var dateDimension = facts.dimension(function(d){
                 return d.dtg;
               });
-
               //Create a dimension for Magnitude
-
-              var magnitudeDimension = facts.dimension(function(d){
+              var magDimension = facts.dimension(function(d){
                 return d.mag;
               });
               //Create a group for Magnitude that just counts the number of elements in the group
-              var magCountDimension = magnitudeDimension.group();
-              console.log(magCountDimension);
+              var magDimensionCount = magDimension.group();
               // Create a dimension for Depth
               var depthDimension = facts.dimension(function(d){
                 return d.depth;
               });
-
               //Create a group for Depth that just counts the number of elements in the group
-              var depthCountDimension = depthDimension.group();
-
-
+              var depthDimensionCount = depthDimension.group();
               // Create a dimension just for the hour from the datetime in the dataset
               //hint: use d3.time.hour() function
-              var dateDimension = facts.dimension(function(d){
+              var hourDimension = facts.dimension(function(d){
                 return d3.time.hour(d.dtg);
               });
-
               //Create a group for the hour dimension that just counts the number of elements per hour
-              var dateCountDimension = dateDimension.group();
-
+              var hourDimensionCount = hourDimension.group();
               // Setup the charts
-
               // Configure Magnitude Bar Graph
               // 480 x 150
               // x dimension domain: [0, 8]
               //use a gap of 56, this number is very obscure. It seems to depend on the width of the chart and on the number of dimensions. It was found using trial and error.
               //set elasticY to true
-
-              graphBarMag.width(480)
+              magnitudeChart.width(480)
                 .height(150)
                 .margins({top: 10, right: 10, bottom: 20, left: 40})
-                .dimension(magnitudeDimension)
-                .group(magCountDimension)
+                .dimension(magDimension)
+                .group(magDimensionCount)
                 .transitionDuration(500)
                 .centerBar(true)
                 .gap(56)
                 .x(d3.scale.linear().domain([0,8]))
                 .elasticY(true);
-
               // Configure Depth bar graph
               // 480 x 150
               // x dimension domain: [0, 100]
-             graphBarDepth.width(480)
+              depthChart.width(480)
                 .height(150)
                 .margins({top: 10, right: 10, bottom: 20, left: 40})
                 .dimension(depthDimension)
-                .group(depthCountDimension)
+                .group(depthDimensionCount)
                 .transitionDuration(500)
                 .centerBar(true)
                 .gap(1)
                 .x(d3.scale.linear().domain([0,100]))
                 .elasticY(true);
-
-
               // Configure Time line graph
               // height: 150
               //x dimension: build the time scale from the data: d3.time.scale().domain(d3.extent(data, function(d) { return d.dtime; }))
-              graphLine.width(960)
+              timeChart.width(960)
                 .height(150)
                 .margins({top: 10, right: 10, bottom: 20, left: 40})
-                .dimension(dateDimension)
-                .group(dateCountDimension)
+                .dimension(hourDimension)
+                .group(hourDimensionCount)
                 .transitionDuration(500)
                 .brushOn(false)
-                .x(d3.time.scale().domain(d3.extent(data, function(d) { return d3.time.hour(d.dtg); })))
+                .x(d3.time.scale().domain(d3.extent(data, function(d) { return d.dtg; })))
                 .elasticY(true);
-
-
-
-              table.width(960)
+              dataTable.width(960)
                 .height(800)
                 .dimension(dateDimension)
                 .group(function(d){
-                  return "Earthquake Table";})
+                  return "Earthquake Table";
+                })
                 .size(10)
-                .columns([function(d){ return d.dtg;},
-                          function(d){ return d.magnitude;},
-                          function(d){ return d.depth;},
-                          function(d){ return d.latitude;},
-                          function(d){ return d.longitude;}])
-                .sortBy(function(d){
-                  return d.dtg;})
+                .columns([
+                  function(d){return d.dtg;},
+                  function(d){return d.mag;},
+                  function(d){return d.depth;},
+                  function(d){return d.lat;},
+                  function(d){return d.long;}])
+                .sortBy(function(d){return d.dtg;})
                 .order(d3.ascending);
               // Render the Charts
               dc.renderAll();
-
+*/
             });
             </script>
 
