--- a/2017_10_09/chicago.html
+++ b/2017_10_09/chicago.html
@@ -28,10 +28,10 @@
 
                 <div id="mapid"></div>
 
-                <div id='bar'>
+                <div id='rowChart'>
                       <h4> Crimes gráfico de linhas </h4>
                 </div>
-                <div id='linear'>
+                <div id='seriesChart'>
                   <h4> Crimes gráfico de linhas </h4>
                 </div>
 
@@ -45,24 +45,19 @@
               attribution: '&copy; <a href="http://www.openstreetmap.org/">OpenStreetMap</a> contributors',
               maxZoom: 17
               }).addTo(map);
-            var barras = dc.barChart("#bar");
-            var timeChart = dc.lineChart("#linear");
-          /*
-            var dataTable = dc.dataTable("#dc-table-graph");
-            var magnitudeChart = dc.barChart("#magnitude-chart");
-            var depthChart = dc.barChart("#depth-chart");
-            var timeChart = dc.lineChart("#time-chart");
-            */
+            var barras = dc.rowChart("#rowChart");
+            var timeChart = dc.seriesChart("#seriesChart");
             // load data from a csv file
             d3.csv("Crimes_Chicago_Sep2017.csv", function (data) {
               // format our data
-              var dtgFormat = d3.time.format.utc("%d-%m-%Y %I:%M:%S");
+              var dtgFormat = d3.time.format.utc("%m/%d/%Y %H:%M:%S");
               data.forEach(function(d){
-                d.dtg = dtgFormat.parse(d.Date);
+                d.dtg = dtgFormat.parse(d.Date.substr(0,19));
                 d.lat = +d.Latitude;
                 d.long = +d.Longitude;
                 d.type = d["Primary Type"];
-                d.id = d["ID"];
+
+
                 var x = d3.scale.ordinal()
                     .domain(["HOMICIDE","ROBBERY","BURGLARY"])
                     .range(["red", "blue", "orange"]);
@@ -83,103 +78,40 @@
 
               var typeDimensionCount = typeDimension.group();
 
+              var dayCrimeTypeDimension = facts.dimension(function (d){
+                return [d3.time.day(d.dtg), d.type];
+              });
+
+              var dayCrimeTypeCount = dayCrimeTypeDimension.group();
 
               console.log(typeDimensionCount);
-              barras.height(400)
-              .margins({top: 30, right: 50, bottom: 25, left: 40})
-              .dimension(typeDimension)
-              .x(d3.scale.ordinal())
-              .xUnits(dc.units.ordinal)
-              .yAxisLabel('Gross')
-              .barPadding(0.1)
-              .outerPadding(0.05)
-              .brushOn(false)
-              .group(typeDimensionCount);
-/*
-              // Run the data through crossfilter and load our 'facts'
-              var facts = crossfilter(data);
-              //Create dataTable dimension using the date (dtg)
-              var dateDimension = facts.dimension(function(d){
-                return d.dtg;
-              });
-              //Create a dimension for Magnitude
-              var magDimension = facts.dimension(function(d){
-                return d.mag;
-              });
-              //Create a group for Magnitude that just counts the number of elements in the group
-              var magDimensionCount = magDimension.group();
-              // Create a dimension for Depth
-              var depthDimension = facts.dimension(function(d){
-                return d.depth;
-              });
-              //Create a group for Depth that just counts the number of elements in the group
-              var depthDimensionCount = depthDimension.group();
-              // Create a dimension just for the hour from the datetime in the dataset
-              //hint: use d3.time.hour() function
-              var hourDimension = facts.dimension(function(d){
-                return d3.time.hour(d.dtg);
-              });
-              //Create a group for the hour dimension that just counts the number of elements per hour
-              var hourDimensionCount = hourDimension.group();
-              // Setup the charts
-              // Configure Magnitude Bar Graph
-              // 480 x 150
-              // x dimension domain: [0, 8]
-              //use a gap of 56, this number is very obscure. It seems to depend on the width of the chart and on the number of dimensions. It was found using trial and error.
-              //set elasticY to true
-              magnitudeChart.width(480)
-                .height(150)
-                .margins({top: 10, right: 10, bottom: 20, left: 40})
-                .dimension(magDimension)
-                .group(magDimensionCount)
-                .transitionDuration(500)
-                .centerBar(true)
-                .gap(56)
-                .x(d3.scale.linear().domain([0,8]))
-                .elasticY(true);
-              // Configure Depth bar graph
-              // 480 x 150
-              // x dimension domain: [0, 100]
-              depthChart.width(480)
-                .height(150)
-                .margins({top: 10, right: 10, bottom: 20, left: 40})
-                .dimension(depthDimension)
-                .group(depthDimensionCount)
-                .transitionDuration(500)
-                .centerBar(true)
-                .gap(1)
-                .x(d3.scale.linear().domain([0,100]))
-                .elasticY(true);
-              // Configure Time line graph
-              // height: 150
-              //x dimension: build the time scale from the data: d3.time.scale().domain(d3.extent(data, function(d) { return d.dtime; }))
-              timeChart.width(960)
-                .height(150)
-                .margins({top: 10, right: 10, bottom: 20, left: 40})
-                .dimension(hourDimension)
-                .group(hourDimensionCount)
-                .transitionDuration(500)
+              barras.width(400)
+               .height(150)
+               .margins({top: 10, right: 10, bottom: 20, left: 40})
+               .x(d3.scale.linear().domain([6,20]))
+               .elasticX(true)
+               .dimension(typeDimension)
+               .group(typeDimensionCount)
+               .ordinalColors(["orange","blue","red"]);
+
+              timeChart.width(980)
+                .height(480)
+                .chart(function(c) { return dc.lineChart(c).interpolate('cardinal').evadeDomainFilter(true); })
                 .brushOn(false)
+                .yAxisLabel("Numeros de crimes")
+                .xAxisLabel("Data")
+                .elasticY(true) 
+                .dimension(dayCrimeTypeDimension)
+                .group(dayCrimeTypeCount)
+                .mouseZoomable(true)
+                .seriesAccessor(function(d) { return d.key[1];})
+                .keyAccessor(function(d) {return d.key[0];})
+                .legend(dc.legend().x(750).y(10).itemHeight(13).gap(5))
                 .x(d3.time.scale().domain(d3.extent(data, function(d) { return d.dtg; })))
-                .elasticY(true);
-              dataTable.width(960)
-                .height(800)
-                .dimension(dateDimension)
-                .group(function(d){
-                  return "Earthquake Table";
-                })
-                .size(10)
-                .columns([
-                  function(d){return d.dtg;},
-                  function(d){return d.mag;},
-                  function(d){return d.depth;},
-                  function(d){return d.lat;},
-                  function(d){return d.long;}])
-                .sortBy(function(d){return d.dtg;})
-                .order(d3.ascending);
-              // Render the Charts
+                .ordinalColors(["orange","red","blue"]);
+
+
               dc.renderAll();
-*/
             });
             </script>
 
