--- a/index.html
+++ b/index.html
@@ -92,6 +92,15 @@
         <p><a href="/datavis-course/2017_10_09/chicago.html">chicago.html</a></p>
     </div><!-- /.container -->
 
+    <div class="container">
+
+      <div class="page-header">
+        <h1>Atividade 30/10/2017</h1>
+      </div>
+        <p><a href="/datavis-course/2017_10_09/songs.html">songs.html</a></p>
+        <p><a href="/datavis-course/2017_10_09/lesmiserables.html">lesmiserables.html</a></p>
+    </div><!-- /.container -->
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
