--- a/index.html
+++ b/index.html
@@ -101,6 +101,15 @@
         <p><a href="/datavis-course/2017_10_30/lesmiserables.html">lesmiserables.html</a></p>
     </div><!-- /.container -->
 
+    <div class="container">
+
+      <div class="page-header">
+        <h1>Atividade 11/06/2017</h1>
+      </div>
+        <p><a href="/datavis-course/2017_11_06/usa.html">usa.html</a></p>
+        <p><a href="/datavis-course/2017_11_06/crimes.html">crimes.html</a></p>
+    </div
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
